--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
         <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
-            Coded by <a href="#">«bLu.Я»</a>💙.PE
+            Coded by <a href="https://www.frontendmentor.io/profile/blu-R">«bLu.Я»</a>💙.PE
         </p>
     </footer>
 </body>
