--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         <article class="card">
             <h2 class="card__title">Supervisor</h2>
             <p class="card__text">Monitors activity to identify project roadblocks</p>
-            <img src="./images/icon-supervisor.svg" alt="icon supervisor" class="card__img">
+            <img src="./images/icon-supervisor.svg" alt="" aria-hidden="true" class="card__img">
         </article>
         <article class="card card_red">
             <h2 class="card__title">Team Builder</h2>
             <p class="card__text">Scans our talent network to create the optimal team for your project</p>
-            <img src="./images/icon-team-builder.svg" alt="icon team builder" class="card__img">
+            <img src="./images/icon-team-builder.svg" alt="" aria-hidden="true" class="card__img">
         </article>
         <article class="card card_orange">
             <h2 class="card__title">Karma</h2>
             <p class="card__text">Regularly evaluates our talent to ensure quality</p>
-            <img src="./images/icon-karma.svg" alt="icon karma" class="card__img">
+            <img src="./images/icon-karma.svg" alt="" aria-hidden="true" class="card__img">
         </article>
         <article class="card card_blue">
             <h2 class="card__title">Calculator</h2>
             <p class="card__text">Uses data from past projects to provide better delivery estimates</p>
-            <img src="./images/icon-calculator.svg" alt="icon calculator" class="card__img">
+            <img src="./images/icon-calculator.svg" alt="" aria-hidden="true" class="card__img">
         </article>
     </main>
     <footer>
